# live-interpreter-api-demo

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: AzureAlternatives.md  ContinuousModeGuide.md  DemoAppGuide.md  IntegrationGuide.md  MultiLanguageVoiceSupport.md  ProductionDeploymentGuide.md  ProductionIntegrationGuide.md  ProjectStructure.md  Quickstart.md  README.md  ReactArchitectureDiagrams.md  StreamlitArchitectureDiagrams.md  VoiceCustomizationGuide.md
examples/: council_meeting_setup.md
scripts/: generate_all_diagrams.py  generate_dataflow.py  generate_react_architecture.py  generate_react_websocket_flow.py  generate_streamlit_architecture.py
src/: __init__.py
src/core/: __init__.py  audio_handler.py  config.py  translator.py
src/react_app/: README.md  __init__.py  package.json  start-demo.bat  start-demo.sh  start.bat  start.sh
src/react_app/backend/: main.py
src/react_app/frontend/: .env.demo  README.md  index-demo.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/react_app/frontend/src/: App.tsx  AppDemo.tsx  index.css  main-demo.tsx
src/react_app/frontend/src/components/: AudioRecorder.tsx  ConnectionStatus.tsx  DemoControls.tsx  DemoSpeakerDisplay.tsx  DemoTranscript.tsx  DemoTranslationDisplay.tsx  (+2 more)
src/streamlit_app/: README.md  app.py  app2.py  app_demo.py
tests/: README.md  test_audio_handler.py  test_config.py  test_continuous_translation_unit.py
tests/legacy/: test_audio.py  test_continuous_translation.py
(+2 files in other folders)
